--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ doc/user_docs/main.*
 !doc/user_docs/main.bib
 !doc/user_docs/main.tex
 !doc/user_docs/ashellwig_c2p2_userdocs.pdf
+**/out/**
+!**/out/bin/.gitkeep
+!**/out/obj/.gitkeep
+!**/out/doc/.gitkeep
 
 # CPP
 *.bc
